--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@100&display=swap">
+    <link rel="icon" href="./public/icons/favicon.ico" type="image/x-icon">
     <title>LUV ALLURE</title>
   </head>
   <body>
