--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@100&display=swap">
+    <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55?styles=16015,16020,15983" rel="stylesheet">
     <link rel="icon" href="./public/icons/favicon.ico" type="image/x-icon">
     <title>LUV ALLURE</title>
   </head>
