--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55?styles=16015,16020,15983" rel="stylesheet">
-    <link rel="icon" href="./public/icons/favicon.ico" type="image/x-icon">
-    <title>LUV ALLURE</title>
+    <link
+      href="https://fonts.cdnfonts.com/css/helvetica-neue-55?styles=16015,16020,15983"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="./public/icons/favicon.ico" type="image/x-icon" />
+    <title>LUVS ALLURE</title>
   </head>
   <body>
     <div id="root"></div>
